# jmake

./: Cargo.toml
src/: main.rs
src/format/: cargo.rs  install.rs  mod.rs  out.rs
