[package]
name = "jmake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.5.9"
