[package]
name = "jmake"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
failure = "0.1.8"
flate2 = "1.0.24"
glob = "0.3.0"
serde = { version = "1.0.144", features = ["derive"] }
tar = "0.4.38"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.5.9"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
